@@ -1,5 +1,6 @@
 SUBDIRS = po desktop-themes gtk-themes icon-themes
 EXTRA_DIST = \
 	gnome-themes-extras.spec gnome-themes-extras.spec.in \
-	intltool-extract.in  intltool-merge.in  intltool-update.in m4 \
+	intltool-extract.in intltool-merge.in intltool-update.in m4 \
 	MAINTAINERS
+DISTCLEANFILES = intltool-extract intltool-merge intltool-update
