@@ -1,10 +1,0 @@
-Amaranth/icons/index.theme.in
-Amaranth/index.theme.in
-Gorilla/icons/index.theme.in
-Gorilla/index.theme.in
-Lush/icons/index.theme.in
-Lush/index.theme.in
-Nuvola/icons/index.theme.in
-Nuvola/index.theme.in
-Wasp/icons/index.theme.in
-Wasp/index.theme.in
