@@ -4,5 +4,5 @@
 New themes:
 * Foxtrot Icon Theme
 * Gion Icon Theme
-* Dropline Neu! icon Theme
-
+* Dropline Neu! Icon Theme
+* Darklooks Gtk Theme
