@@ -1,3 +1,13 @@
+2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* Makefile.am:
+	* NEWS:
+	* configure.ac:
+	* icon-themes/Foxtrot/Makefile.am:
+	* icon-themes/Gion/Makefile.am:
+	* icon-themes/Neu/Makefile.am:
+	Updated Makefile.am to fix make distcheck
+
 2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* AUTHORS:
